<resources>
    <string name="app_name">Mamama Music</string>
    <string name="welcome_songs">Listen to a few of my favorite songs</string>
    <string name="welcome_artists">These are a few of my favorite artists</string>
    <string name="player_title">Music Player</string>
    <string name="song_list">Song List</string>
    <string name="browse">Browse the songs</string>
    <string name="artist">By Artist</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>


</resources>